
  [ Joey Hess ]
  * Remove unused pkg-list files and configuration for i386 floppys.

  [ Samuel Thibault ]
  * Use console-setup on kfreebsd text images.

  [ Jurij Smakov ]
  * Update kernel version to 3.2.0-1.

  [ Samuel Thibault ]
  * Replace kbd-chooser with console-setup-udeb+kbd-udeb, and
    console-keymaps-* with console-setup-*-ekmap.

  [ Bastian Blank ]
  * mips: Use initramfs.

 -- Jurij Smakov <jurij@debian.org>  Mon, 20 Feb 2012 21:02:22 +0000

debian-installer (20110106) unstable; urgency=low

  * Use SpaceFun theme. Closes #603554.
  * Update Linux kernel to 2.6.32-29.

 -- Otavio Salvador <otavio@debian.org>  Thu, 06 Jan 2011 09:37:41 -0200

debian-installer (20101127) unstable; urgency=low

  [ Christian Perrier ]
  * Add pata-modules to powerpc builds to properly support
    YDL Powerstation. Thanks to Milan Kupcevic. Closes: #603893
  * Add ttf-lao-udeb to graphical installer to properly support the Lao
    language

 -- Otavio Salvador <otavio@debian.org>  Sat, 27 Nov 2010 15:18:28 -0200

debian-installer (20101121) unstable; urgency=low

  [ Otavio Salvador ]
  * Enable localudebs usage again since #600852 has been fixed.
  * Add VCS-Browser field to debian.control. Closes: #601908

  [ Martin Michlmayr ]
  * LS Pro: /boot can be ext3 too.  Thanks Ryan Tandy.

  [ Otavio Salvador ]
  * Update Linux kernel udebs for 2.6.32-27.
  * sparc/sparc64: put input-modules into initrd. Closes: #602740

  [ Colin Watson ]
  * geniso_hybrid_plus_firmware_partition: Cope if the disk size exceeds
    32MB.  (The previous code seems to have misunderstood isohybrid's
    defaults slightly, but we now just specify the full CHS geometry
    explicitly in case anything changes in the future.)

  [ Christian Perrier ]
  * Add ttf-sinhala-lklug-udeb to graphical installer to properly
    support the Sinhala language

  [ Otavio Salvador ]
  * Document SPLASH_PNG variable for build configuration.
