@@ -430,7 +430,7 @@ SPLASH_PNG
 
 INITRD_FS
   The filesystem to use for initrds, needs to be built into the kernel.
-  ext2, cramfs, initramfs, or jffs2.
+  ext2, initramfs, or jffs2.
 
 MKFS_JFFS2
   If using jffs2 for the INITRD_FS, you will need to set this variable to
