@@ -52,8 +52,6 @@ Build-Depends:
 #		calls in directfb. For now, this is done by setting EXTRAFILES.
 #
 # Filesystem tools:
-	cramfsprogs [powerpc ia64 mips mipsel armeb armel],
-#		For arches that use cramfs initrds.
 	genext2fs (>= 1.3-7.1),
 #		For creating ext2 filesystems without being root.
 #		1.3-7.1 fixes issues on several arches.
