@@ -191,6 +191,7 @@ debian-installer (2011xxxx) UNRELEASED; urgency=low
 
   [ Bastian Blank ]
   * mips: Use initramfs.
+  * Remove unused cramfs support.
 
  -- Jurij Smakov <jurij@debian.org>  Mon, 20 Feb 2012 21:02:22 +0000
 
